@@ -1,5 +1,12 @@
 2008-06-07  Neal H. Walfield  <neal@gnu.org>
 
+	* as-build.c (as_build): If the remaining bits match the PTE's
+	guard, stop processing no matter what type of object the PTE
+	points to.  Only use lowest GBITS of PTE_GUARD when setting the
+	pivot's guard.
+
+2008-06-07  Neal H. Walfield  <neal@gnu.org>
+
 	* as.h (AS_CHECK_SHADOW): If only the types differ and the
 	difference is that the shadow capability says the type is
 	cap_void, then do not error out.
